<resources>
    <string name="app_name">TheERRORs_FitLyfe</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_calorie_consumption">Calorie Log</string>
    <string name="title_activity_calorie_input">Calorie Input</string>
    <string name="title_activity_water_consumption">Water Log</string>
    <string name="title_activity_water_input">Water Input</string>
    <string name="title_activity_sleep_input">Sleep Input</string>
    <string name="title_activity_sleep_tracking">Sleep Log</string>
...


    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
...
