<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.ttu.www.theerrors_fitlyfe.Sleep_Tracking"
    tools:layout_editor_absoluteY="81dp">

    <ProgressBar
        android:id="@+id/currentProgress"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="133dp"
        android:layout_height="44dp"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="24dp"
        android:progress="47"
        android:progressTint="@android:color/holo_blue_light"
        android:scaleY="10"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <ProgressBar
        android:id="@+id/previousProgress"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="132dp"
        android:layout_height="51dp"
        android:layout_marginLeft="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:progress="81"
        android:progressTint="@android:color/holo_blue_light"
        android:scaleY="10"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currentProgress" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="120dp"
        android:layout_height="38dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="Today:"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="151dp"
        android:layout_height="27dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:text="Yesterday"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/previousProgress"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="112dp"
        android:layout_height="37dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="36dp"
        android:text="Today"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/currentProgress"
        app:layout_constraintTop_toBottomOf="@+id/avgSleep" />

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="316dp"
        android:layout_height="299dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:context="com.example.parsaniahardik.progressanimation.MainActivity">

        <ProgressBar

            android:id="@+id/circularProgressbar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:indeterminate="false"
            android:max="100"
            android:progress="50"
            android:progressDrawable="@drawable/custom_progressbar_drawable"
            android:secondaryProgress="100" />

        <ImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true" />

        <TextView
            android:id="@+id/tv"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_alignParentBottom="true"
            android:layout_alignStart="@+id/circularProgressbar"
            android:gravity="center"
            android:text="25%"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/circularProgressbar"
            android:layout_alignParentStart="true"
            android:text="Progress Towards Goal:"
            android:textSize="24sp" />

    </RelativeLayout>

    <TextView
        android:id="@+id/avgSleep"
        android:layout_width="wrap_content"
        android:layout_height="26dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="8 hrs per night"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="parent" />


</android.support.constraint.ConstraintLayout>