<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/Add"
        android:icon="@drawable/plus"
        android:orderInCategory="0"
        android:title="Add"
        app:showAsAction="always" />

    <item
...
