...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.ttu.www.theerrors_fitlyfe.BMI_Tracking"
    tools:layout_editor_absoluteY="81dp">

    <ProgressBar
        android:id="@+id/currentProgress"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="133dp"
        android:layout_height="44dp"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="24dp"
...
        android:progressTint="@android:color/holo_blue_light"
        android:scaleY="10"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <ProgressBar
        android:id="@+id/previousProgress"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="132dp"
        android:layout_height="51dp"
        android:layout_marginLeft="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
...
